# realsense-depth-to-vaapi-hevc10

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
